# xui-bot

./: .env.example  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
bot/api/: __init__.py  client.py  exceptions.py  models.py
bot/db/: __init__.py  fsm.py  models.py
bot/handlers/: __init__.py  common.py
bot/handlers/admin/: clients.py  menu.py
bot/handlers/client/: account.py
bot/i18n/: __init__.py
bot/keyboards/: admin.py  callbacks.py  client.py
bot/middlewares/: auth.py  filters.py  throttle.py
bot/states/: __init__.py
bot/tasks/: report.py
bot/utils/: formatting.py
