[project]
name = "xui-bot"
version = "0.1.0"
description = "Admin/client Telegram bot for the 3x-ui panel API"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4.0",
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tortoise-orm>=0.21",
    "qrcode[pil]>=7.4",
    "apscheduler>=3.10,<4.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
speed = ["uvloop>=0.19"]

[project.scripts]
xui-bot = "bot.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"
